# obsidian-knowledge-pipeline

./: .gitignore  LICENSE  README.md  config.py  obsidian-mcp-spec.md  pyproject.toml  requirements.txt  server.json  server.py
prompts/: __init__.py  canvas.py  process_youtube.py  voice.py
tools/: __init__.py  canvas.py  screenshots.py  vault.py  youtube.py
