[project]
name = "obsidian-knowledge-pipeline"
version = "0.1.0"
description = "MCP server for reading from and writing to an Obsidian vault"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.2",
    "python-dotenv>=1.2.2",
    "youtube-transcript-api>=1.2.4",
]
