[project]
name = "obsidian-knowledge-pipeline"
version = "0.1.0"
description = "MCP server for reading from and writing to an Obsidian vault"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.2",
    "python-dotenv>=1.2.2",
    "youtube-transcript-api>=1.2.4",
    # Screenshot / visual-capture feature (see tools/screenshots.py):
    "pymupdf>=1.24.0",          # PDF page rendering to HD PNG (pure wheels, no system binary)
    "pillow>=10.0.0",           # Downscale the HD save into a smaller analysis copy
    "yt-dlp>=2024.1.0",         # Download a YouTube stream for ffmpeg frame extraction
    "imageio-ffmpeg>=0.5.1",    # Bundled static ffmpeg binary (fallback when none on PATH)
]
